@@ -2095,3 +2095,6 @@ Increased modifier limit to 10,000 in rcontrib.
 Fixed issues with glrad and added zoom response to mouse wheel input.
 
 Added missing definition of "ashik2" material type to reference manual.
+
+Changed genBSDF to calculate device thickness assuming Zmax==0 so
+pkgBSDF will generate correct proxy geometry.
